--- a/src/styles/repository.css
+++ b/src/styles/repository.css
@@ -195,7 +195,11 @@
     }
     .repository-header{
         justify-content: flex-start;
-        padding: 20px 16px;
+        padding: 20px 15px;
+    }
+    .repository-container{
+        width: 100%;
+        max-width: 440px;
     }
     .repository-title{
         justify-content: flex-start;
@@ -210,7 +214,7 @@
         gap: 24px;
     }
     .repo-item{
-        padding: 16px;
+        padding: 15px;
     }
     .repo-name {
         font-size: 18px;
